<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestActivity!</string>
    <string name="app_name">游捷用车</string>
    
    <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
    <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
    <string name="titlebar_img_btn_down_arrow_desc">标题栏下箭头</string>
    <string name="title">标题栏</string>
    <string name="title_img_btn_left_desc">标题栏左边按钮</string>
    <string name="title_img_btn_right_desc">标题栏右边按钮</string>
    <string name="title_back">返回</string>
    
    <string name="mdmc">门店名称</string>
    <string name="mdwz">门店位置</string>
    <string name="cclx">乘车路线</string>
    <string name="clxh">车辆型号</string>
    <string name="shdz">收货地址</string>
    <string name="xm">姓名</string>
     <string name="provice">省份</string>
     <string name="city">城市</string>
     <string name="detail_address">具体位置</string>
    <string name="ycsj">用车时间</string>
     <string name="hcsj">还车时间</string>
    <string name="zfy">总费用</string>
    <string name="lxkf">联系客服</string>
    <string name="cpjs">产品介绍</string>
    <string name="dqbb">当前版本</string>
     <string name="dqyh">当前用户</string>
	<string name="exit">退出登录</string>
	<string name="loading">正在加载</string>
	<string name="cjwt">常见问题</string>
	<string name="sl">数量</string>
	
	<string name="errcode_success">已成功分享！</string>
	<string name="errcode_cancel">已取消分享！</string>
	<string name="errcode_deny">分享被拒绝！</string>
	<string name="errcode_unknown">发送返回！</string>
	<string name="fxdwx">分享到微信[减免手续费]</string>
	
	
	<string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <style name="MMTabButton">
		<item name="android:textSize">12.0dip</item>
		<item name="android:gravity">center_horizontal</item>
		<item name="android:background">@drawable/bg_checkbox_menus</item>
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:button">@null</item>
		<item name="android:textColor">@color/white</item>
		<item name="android:layout_weight">1.0</item>
		<item name="android:paddingBottom">2.0dip</item>
		<item name="android:paddingTop">2.0dip</item>
	</style>
</resources>