<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <cn.com.xyc.view.LabelText
        android:id="@+id/elt_lxkf"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        bgImage="@drawable/p_my_mobile"
        android:paddingLeft="45.0dip"
        label="@string/lxkf" />

    <cn.com.xyc.view.LabelText
        android:id="@+id/elt_cpjs"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        bgImage="@drawable/p_desc"
        label="@string/cpjs"
        android:paddingLeft="45.0dip"  />

    
    
     <cn.com.xyc.view.LabelText
        android:id="@+id/elt_dqyh"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        bgImage="@drawable/p_call"
        label="@string/dqyh"
        android:paddingLeft="45.0dip"  />
     
      <cn.com.xyc.view.LabelText
        android:id="@+id/elt_question"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        bgImage="@drawable/p_question"
        label="@string/cjwt"
        android:paddingLeft="45.0dip" />
      
      <cn.com.xyc.view.LabelText
        android:id="@+id/elt_dqbb"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        bgImage="@drawable/p_share"
        label="@string/dqbb"
        android:paddingLeft="45.0dip" />
 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_quit"
            android:text="退出登录"
            android:textColor="#FFFFFFFF"
            android:textSize="16dip" />
        
        <TextView
            android:id="@+id/tv_object"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_marginTop="15dip"
            android:text="北京寰网科技有限责任公司   版权所有"
            android:layout_height="fill_parent" />

    </LinearLayout>

</LinearLayout>