<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/title" />
    

    <LinearLayout android:id="@+id/lay_get"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/txt_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取车信息" />
         
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_mdmc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/mdmc"
        android:paddingLeft="10.0dip" />
    
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/ycsj"
        android:paddingLeft="10.0dip" />
    
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_clxh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/clxh"
        android:paddingLeft="10.0dip" />
    </LinearLayout>
    
    
    <LinearLayout android:id="@+id/lay_return"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_marginTop="15dip"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/txt_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="还车信息" />
         
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_mdmc_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/mdmc"
        android:paddingLeft="10.0dip" />
    
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_time_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/ycsj"
        android:paddingLeft="10.0dip" />
    
    <cn.com.xyc.view.EditLabelText
        android:id="@+id/elt_clxh_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        bgImage="@drawable/dev_line_bg_common"
        label="@string/clxh"
        android:paddingLeft="10.0dip" />
    </LinearLayout>
    
    

</LinearLayout>